tests/paczka1/small_fuzzy/86474823.err
Error in line 1: r9EXs S591 35,4
Error in line 11: S276 S276 91,9
